--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "GitHub Real Names",
-  "description": "Use real names on GitHub",
+  "name": "GitHub All Cats",
+  "description": "Anonymize other GitHub users",
   "icons": {
     "16": "icon.png",
     "48": "icon.png",
@@ -17,7 +17,7 @@
   },
   "browser_action": {
     "default_icon": "icon.png",
-    "default_title": "Toggle using real GitHub real names"
+    "default_title": "Toggle using cat names on GitHub"
   },
   "content_scripts" : [
     {
