--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "version": "1.2.2",
   "permissions": [
     "activeTab",
-    "tabs"
+    "tabs", "https://github.com/*"
   ],
   "background": {
     "scripts": ["background.js"],
@@ -25,7 +25,7 @@
          "https://github.com/*"
       ],
       "js" : [ "contentscript.js" ],
-      "run_at" : "document_idle",
+      "run_at" : "document_end",
       "all_frames" : false
     }
   ],
